Fix: Fixed sidebar nav link area being too big

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,10 +51,13 @@ nav {
 }
 
 .sidenav > li > a {
+  margin-top: 50px;
   color: #142424;
   font-size: 1.5rem;
   text-transform: uppercase;
-  padding-top: 30%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 /* Main Panel Area (sitewide) */
